--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,8 +5,30 @@ pipeline {
     environment {
         DOCKERHUB_USER = 'shaputtalab1'
         IMAGE_NAME = 'jenkins-ubuntu-lab'
+        SONARQUBE = 'SonarCloud'
+        SONAR_TOKEN = credentials('sha-sonar-token')
     }
     stages {
+          stage('Checkout') {
+            steps {
+                checkout scm
+            }
+        }
+
+         stage('SonarQube Analysis') {
+            steps {
+                withSonarQubeEnv('SonarCloud') {
+                    sh '''
+                        # Ensure we're in the root where sonar-project.properties exists
+                        cd ${WORKSPACE}
+                        sonar-scanner \
+                          -Dsonar.projectBaseDir=python-app \
+                          -Dsonar.login=$SONAR_TOKEN
+                    '''
+                }
+            }
+        }
+        
         stage('Clean up image and container') {
             steps {
                 script {
