--- a/jenkinsfile
+++ b/jenkinsfile
@@ -17,7 +17,7 @@ pipeline {
 
         stage('Install dependencies') {
     steps {
-        sh 'pip3 install -r requirements.txt'
+        sh 'pip3 install -r python-app/requirements.txt'
     }
 }
 
