--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=shaputta_DevsecopsLab2
 sonar.organization=shaputta
-sonar.sources=.
+sonar.sources=python-app
 sonar.host.url=https://sonarcloud.io
 sonar.python.coverage.reportPaths=coverage.xml
 sonar.login=${SONAR_TOKEN}
