--- a/python-app/Dockerfile
+++ b/python-app/Dockerfile
@@ -1,12 +1,12 @@
 FROM python:3.9-slim
-
+COPY . /app
 WORKDIR /app
 
 # Install packages with pip
 RUN pip install -r requirements.txt
 #RUN pip install flask==2.0.1 requests==2.25.1
 
-COPY app.py .
+#COPY app.py .
 
 EXPOSE 5000
 
