--- a/python-app/Dockerfile
+++ b/python-app/Dockerfile
@@ -1,11 +1,12 @@
 FROM python:3.9-slim
-COPY . /app
+#COPY . /app
 WORKDIR /app
 
 # Install packages with pip
-RUN pip install -r requirements.txt
+RUN pip install -r /app/requirements.txt
 #RUN pip install flask==2.0.1 requests==2.25.1
 
+COPY python-app/ /app/
 #COPY app.py .
 
 EXPOSE 5000
